Turn off looking for updated version of convert2rhel.

--- a/c2r_convert.yml
+++ b/c2r_convert.yml
@@ -8,6 +8,7 @@
     CONVERT2RHEL_DISABLE_TELEMETRY: 1
     # CONVERT2RHEL_UNSUPPORTED_INCOMPLETE_ROLLBACK: 1
     CONVERT2RHEL_INCOMPLETE_ROLLBACK: 1
+    CONVERT2RHEL_LATEST_VERSION: 0
   vars:
     rhsm_username: ""
     rhsm_password: ""
