--- a/group_vars/control/worflow_job_templates.yml
+++ b/group_vars/control/worflow_job_templates.yml
@@ -23,7 +23,7 @@ controller_workflows:
         - question_name: Select RHEL Lifecycle Environment to use for analysis
           variable: rhel_lifecycle_environment
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS7_to_RHEL7.*$') | map(attribute='name') | list }}"
           required: true
     ask_limit_on_launch: true
     ask_variables_on_launch: true
@@ -69,7 +69,7 @@ controller_workflows:
         - question_name: Select target RHEL Lifecycle Environment to convert to
           variable: rhel_lifecycle_environment
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS7_to_RHEL7.*$') | map(attribute='name') | list }}"
           required: true
     ask_limit_on_launch: true
     ask_variables_on_launch: true
