--- a/satellite_node_change_content_source.yml
+++ b/satellite_node_change_content_source.yml
@@ -55,7 +55,7 @@
           - "name: {{ item }}"
           - "lifecycle_environment: {{ target_lifecycle_environment }}"
           - "content_view: {{ lifecycle_environment_resource_info_result.resources \
-            | selectattr('name', 'search', target_lifecycle_environment) | map(attribute='content_views.name') | first }}"
+            | selectattr('name', 'search', target_lifecycle_environment) | map(attribute='content_views') | first | map(attribute='name') | first }}"
           - "organization: {{ organizations_resource_info_result.resources | selectattr('label', 'search', org_id) | map(attribute='name') | first \
             if org_id is defined \
             else org_name }}"
