Add task to include centos_c2r content_view variables.

--- a/setup_controller.yml
+++ b/setup_controller.yml
@@ -41,6 +41,11 @@
     - ansible.builtin.debug:
         msg: "{{ dynamic_development_source_vars }}"
 
+    - name: Include Controller rhel_8_inventories CaC via vars files
+      ansible.builtin.include_vars:
+        file: config_as_code/satellite/centos7_c2r/content_views.yml
+        hash_behavior: merge
+
 # Allow projects to pull collections via collections/requirements.yml
     - name: Turn on AWX_COLLECTIONS_ENABLED on controller
       awx.awx.settings:
