Include lifecycle_environments vars, merge and delegate to satellite.

--- a/setup_controller.yml
+++ b/setup_controller.yml
@@ -41,10 +41,11 @@
     - ansible.builtin.debug:
         msg: "{{ dynamic_development_source_vars }}"
 
-    - name: Include Controller rhel_8_inventories CaC via vars files
+    - name: Include CentOS to RHEL lifecycle_environments vars
       ansible.builtin.include_vars:
-        file: config_as_code/satellite/centos7_c2r/content_views.yml
+        file: config_as_code/satellite/centos7_c2r/lifecycle_environments.yml
         hash_behaviour: merge
+      delegate_to: satellite.example.com
 
 # Allow projects to pull collections via collections/requirements.yml
     - name: Turn on AWX_COLLECTIONS_ENABLED on controller
