--- a/group_vars/control/worflow_job_templates.yml
+++ b/group_vars/control/worflow_job_templates.yml
@@ -66,12 +66,16 @@ controller_workflows:
       description: ''
       spec:
         - question_name: Select EL Group to convert
+          question_description: Use to limit job to hosts that are members of the selected host group.
           variable: dynamic_inventory_group
+          default: ''
           type: multiplechoice
           choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') | list }}"
           required: true
         - question_name: Select target RHEL Lifecycle Environment to convert to
+          question_description: Select RHEL Lifecycle Environment to use during ConvertRHEL conversion process.
           variable: rhel_lifecycle_environment
+          default: ''
           type: multiplechoice
           choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS7_to_RHEL7.*$') | map(attribute='name') | list }}"
           required: true
